feat(persistence): add Postgres teams repository with Flyway, integration tests, and code quality improvements
Introduce a database-backed persistence layer for teams using Postgres,
alongside Flyway-managed schema and integration test verification.

Persistence layer:

* add `TeamEntity` and Spring Data `JpaTeamRepository`
* implement `DbTeamsRepository` for Postgres-backed access
* retain `CsvTeamsRepository` as default fallback
* configure repository selection via Spring `@Profile` (`local` uses DB)

Database setup:

* add Flyway migration `V2__create_teams_table.sql`
* create `teams` table and seed with initial data

Testing:

* add `TeamsRepositoryIntegrationTest` to verify DB-backed data retrieval
* configure Gradle `integrationTest` task for `integration`-tagged tests

Code quality improvements (SonarQube):

* refactor `CsvTeamsRepository` to use `Path` and `Files.lines` for safer I/O handling
* fix encoding issue by explicitly using `StandardCharsets.ISO_8859_1` for Kaggle dataset
* replace `collect(Collectors.toList())` with `Stream.toList()` (Java 16+)
* extract team field parsing into a dedicated helper method
* update `TeamsController` to make endpoint method `public` per Spring best practices

This establishes database-backed persistence, validates connectivity to a
Dockerized Postgres instance, and improves overall code maintainability.